<resources>
    <string name="app_name">DevMatch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="find_a_project_label">Find a project</string>
    <string name="second_fragment_label">Project Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="log_out">Log out</string>
    <string name="set_up_profile">Set up profile</string>
    <string name="image_describing_the_project">image describing the project</string>
    <string name="project_type">Project Type:</string>
    <string name="organization_profile_picture">Organization profile picture</string>
    <string name="description">Description:</string>
    <string name="projects_will_go_here">Projects will go here</string>
    <string name="tap">Tap</string>
    <string name="placeholder_initals">OK</string>
    <string name="t">T</string>
    <string name="posted_by">Posted By:</string>
    <string name="apply">Apply</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="logo">Logo</string>
    <string name="loading_projects">Loading projects…</string>
    <string name="skills">Skills</string>
    <string name="save">Save</string>
    <string name="bio">Bio</string>
    <string name="github">GitHub</string>
    <string name="two_developers_discussing">Two developers discussing</string>
    <string name="welcome">Welcome\ </string>
    <string name="invalid_username_password">Invalid username or password</string>
    <string name="enter_password">Please enter your password</string>
    <string name="enter_username">Please enter your username</string>
    <string name="log_in_toolbar">Log In</string>
    <string name="don_t_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="register">Register</string>
    <string name="example_domain_com">example@domain.com</string>
    <string name="organization">Organization</string>
    <string name="name">Name</string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>
    <string name="register_org">Register as Organization</string>
    <string name="register_dev">Register as Developer</string>
    <string name="fill_in_required_fields">Please fill in all the required fields</string>
    <string name="title_activity_organization">OrganizationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading_developer_profiles">Loading developer profiles…</string>
    <string name="o">O</string>
    <string name="github_logo">GitHub Logo</string>
    <string name="error_signout">There was an error signing out.</string>
    <string name="logout_successful">Successfully logged out.</string>
    <string name="invite">Invite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>
    <string name="describe_your_project">Describe your project</string>
    <string name="project_type_e_g_android_ios">Project Type (e.g., Android, iOS, etc.)</string>
    <string name="people_building_things">People building things</string>
    <string name="error_tying_project_to_account">Error tying project to your organization account</string>
    <string name="success_tying_project_to_account">Your project has been tied to your organization account.</string>
    <string name="repositories">Repositories</string>
    <string name="dev_profile_needed_to_apply">You need a developer profile to apply</string>
    <string name="set_up_profile_now">Would you like to set up your profile now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="review">Review</string>
    <string name="extend_offer">Extend offer</string>
    <string name="remove">Remove</string>
    <string name="applicant_load_error">Error reading applicants from the database</string>
    <string name="fill_all_fields">Please fill all the fields.</string>
    <string name="profile_save_success">Profile saved successfully</string>
    <string name="error_tying_profile_to_account">Error tying profile to your account</string>
    <string name="error_loading_developer_profiles">Error reading developer profiles from the database</string>
    <string name="review_application">Review an application</string>
    <string name="you_already_applied">You\'ve already applied</string>
    <string name="application_received">Your application has been received!</string>
    <string name="you_currently_have_no_applications">You currently have no applications</string>
    <string name="update_profile">Update your profile</string>
    <string name="update">Update</string>
    <string name="filter">Filter</string>
    <string name="android_projects">Android Projects</string>
    <string name="web_projects">Web Projects</string>
    <string name="ios_projects">iOS Projects</string>
    <string name="date_posted">Date Posted (Newest First)</string>
    <string name="data_updated">Date Updated (Newest First)</string>
    <string name="num_applicants_ascending">Number of Applicants (Ascending)</string>
    <string name="num_applicants_descending">Number of Applicants (Descending)</string>
    <string name="filter_projects">Filter &amp; Sort Projects</string>
    <string name="cancel">Cancel</string>
    <string name="error_loading_projects">Error retrieving projects from database</string>
    <string name="organization_s_zip_code">Organization\'s Zip Code</string>
    <string name="find">Find</string>
    <string name="verify">Verify</string>
    <string name="fill_all_required_fields">Please fill all required fields.</string>
    <string name="project_save_success">Project saved successfully</string>
    <string name="kilometers">km</string>
    <string name="miles">mi</string>
    <string name="max_distance">Max Distance</string>
    <string name="reset">Reset</string>
    <string name="zip_code">Zip Code</string>
    <string name="provide_zip_code">Please provide your zip code</string>
    <string name="signup_success">Sign up successful!</string>
    <string name="sort_by">Sort by:</string>
    <string name="within">Within:</string>
    <string name="keywords">Keywords:</string>
    <string name="add">Add</string>
    <string name="keyword">Keyword</string>
    <string name="closes_the_webview">Closes the WebView</string>
    <string name="upload_descriptive_image">Please upload a descriptive image</string>
    <string name="upload_project_image">Upload project image</string>
    <string name="image_description">Image description</string>
    <string name="you_have_an_application_from">You have an application from\ </string>
    <string name="would_like_you_to_consider_their_project">" would like you to consider their project."</string>
    <string name="no_projects">This user has no projects.</string>
    <string name="interview">Interview</string>
    <string name="interview_offer_from">"Interview offer from "</string>
    <string name="dear">"Dear "</string>
    <string name="no_email_app_found">No email apps found.</string>
    <string name="send_email_using">"Send email using: "</string>
    <string name="a_list_containing_the_developer_s_repositories">A list containing the developer\'s repositories</string>
    <string name="projects">Projects</string>
    <string name="already_applied">developers already applied</string>
    <string name="singular_already_applied">developer already applied</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="error_selecting_project">Couldn\'t select project</string>

</resources>