<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/spinnerSortProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/project_sorting_options_array"
        android:minHeight="48dp"
        android:paddingVertical="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_projects"
        app:layout_constraintStart_toStartOf="@+id/spinnerSortProjects"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSortProjects" />

    <CheckBox
        android:id="@+id/checkBoxiOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ios_projects"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAndroid"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAndroid" />

    <CheckBox
        android:id="@+id/checkBoxWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_projects"
        app:layout_constraintStart_toStartOf="@+id/checkBoxiOS"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxiOS" />

    <EditText
        android:id="@+id/etDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/max_distance"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/checkBoxWeb"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxWeb" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:entries="@array/units_of_distance"
        app:layout_constraintBottom_toBottomOf="@+id/etDistance"
        app:layout_constraintStart_toEndOf="@+id/etDistance"
        app:layout_constraintTop_toTopOf="@+id/etDistance" />

</androidx.constraintlayout.widget.ConstraintLayout>